[project]
name = "sagids"
dynamic = ["version"]
description = "Routines for Reciprocal Physics"
readme = "README.md"
authors = [
    {name = "D E Haynes"}
]
maintainers = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
license = "GPL-3.0-or-later"
classifiers = [
    "Topic :: Multimedia",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]

[project.urls]

[project.scripts]
sagids = "reciprocus.main:run"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "reciprocus",
    "reciprocus.test",
]

[tool.setuptools.package-data]
reciprocus = [
]

[tool.setuptools.dynamic]
version = {attr = "reciprocus.__version__"}
